    be derived because in the UnitsCompiler a UnitDefinition object 
    was created with undefined level/version configuration. Furthermore,
    there was a bug in the method containsUndeclaredUnits() in ASTNode.
    
  - Improved the units derivation: There were multiple problems in 
    re-scaling and merging of units and also when determining the actual
    unit of a species.

-- end of unit improvements
    
  - There was a bug in KineticLaw that prevented a correct iteration
    through all child elements.
    
  - When cloning JSBML wrongly assigned the same 
    TreeNodeChangeListeners to the new data structure.
    
  - The clone methods were corrected to register properly all entities
  	with an id.
    
  - QuantityWithUnit did not fire update events when changing its value
    because of an incorrect comparison between the previous and the new
    value.
    
  - Corrected a bug that made it impossible to set a kinetic law with an 
    existing list of local parameters as the new kinetic law in a 
    different reaction.
    
  - Meike Aichele detected and fixed the problem that some Listeners were 
    set too soon in the Model class, so that no Event was detected.
  
  - TODO : 
  - rdf namespace missing (when starting from scratch) 
  - Model.getSpeciesReference(String) corrected
  - annotation in the sbml namespace correctly read.
  
  
  * Known issues :

  - Reading of more than one RDF Description elements in the RDF annotation 
    block (the official SBML annotation scheme) is not supported at the 
    moment. Planned for the next major release. 
  - The RDF block at the top level of the annotation is considered to be the
    official SBML annotation.
    
    
======================================================================
Version 0.8-rc1 (08-12-2011)
======================================================================

* New Features:

  
  - Where necessary, initDefaults has been complemented with an 